# llm-study

./: .gitignore  6_sLLM_학습하기.ipynb  README.md  checkpoints.db  pyproject.toml
2. LLM과 대화하기/: 1_LLM_WITH_HTTP.js  2_LLM_WITH_LANGCHAIN.py  3_SYSTEM_MESSAGE_TEST.py  4_STEAMING_TEST.py
6. sLLM학습하기/: app.py
ch6/: api_request_parallel_processor.py  app.py  load_train_dataset.py  upload_model.py
langchain-study/RAG2/: app.py  repository.py
requests/: text2sql_evaluation.jsonl
results/: text2sql_evaluation.jsonl
