[project]
name = "llm-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.29.3",
    "autotrain-advanced==0.7.77",
    "bitsandbytes==0.43.1",
    "datasets==2.19.0",
    "dotenv>=0.9.9",
    "huggingface-hub==0.22.2",
    "numpy==1.26.4",
    "tiktoken==0.6.0",
    "torch>=2.1.0,<2.2.0",
    "torchaudio>=2.1.0,<2.2.0",
    "torchvision>=0.16.0,<0.17.0",
    "transformers>=4.40.1",
]
